[project]
name = "z-graphormer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numba>=0.65.0",
    "pandapower>=3.4.0",
    "pytest>=9.0.3",
    "scipy>=1.16.3",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
    "torchaudio>=2.11.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.26.0",
]
